--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "connect-multiparty": "^2.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^6.2.4",
     "mongoose-pagination": "^1.0.0",
